--- a/themes/hugo-split-theme/assets/scss/_content.scss
+++ b/themes/hugo-split-theme/assets/scss/_content.scss
@@ -411,3 +411,20 @@ video.video {
   width           : 100%;
   height          : 100%;
 }
+
+
+// Button
+
+p.btn a{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  font-weight: bolder;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
